--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
         which migrate
 
     - name: Run Migrations
-      run: make migrate
+      run: make migrateup
 
     - name: Test
       run: make test
