--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,11 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - uses: actions/setup-node@v2
+      with:
+        node-version: '20'
+
+
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
