--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -7,6 +7,7 @@ packages:
     engine: "postgresql"
     emit_db_tags: false
     emit_prepared_queries: false
-    emit_interface: false
+    emit_interface: true
     emit_exact_table_names: false
     emit_json_tags: true
+    emit_empty_slices: true
