--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,12 +5,19 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  deploy:
     name: Build Image
     runs-on: ubuntu-latest
     steps:
         - name: Checkout code
           uses: actions/checkout@v4
+
+        - name: Install Kubectl
+          uses: azure/setup-kubectl@v4
+          with:
+            version: 'v1.32.0'
+            id: install
+    
         - name: Configure AWS credentials
           uses: aws-actions/configure-aws-credentials@v4
           with:
@@ -31,5 +38,11 @@ jobs:
             REPOSITORY: simple_bank
             IMAGE_TAG: ${{ github.sha }}
           run: |
-            docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
-            docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
+            docker build -t $REGISTRY/$REPOSITORY -t latest .
+            docker push -a $REGISTRY/$REPOSITORY
+        - name: Deploy Image to AWS Eks
+          run: |
+            kubectl apply -f eks/aws-auth.yaml
+            kubectl apply -f eks/deployment.yaml
+            kubectl apply -f eks/service.yaml
+            
