--- a/eks/deployment.yaml
+++ b/eks/deployment.yaml
@@ -17,5 +17,6 @@ spec:
       containers:
       - name: simple-bank-api
         image: 390403862575.dkr.ecr.ap-south-1.amazonaws.com/simple_bank:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 8080
