fixed aws eks deploy error

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,6 +46,6 @@ jobs:
 
         - name: Deploy Image to AWS Eks
           run: |
-            kubectl apply -f eks/aws-auth.yaml
+            kubectl apply -f eks/aws-auth.yaml --validate=false
             kubectl apply -f eks/deployment.yaml
             kubectl apply -f eks/service.yaml
